--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -83,9 +83,9 @@
             Login
           </a>
 
-          <!-- Nút Download -->
+          <!-- Nút Register -->
           <a
-            href="/view/signin"
+            href="/view/register"
             class="primary-btn-bg hover:bg-blue-700 text-white text-sm py-2 px-4 rounded-full font-semibold transition duration-300"
           >
             Register
